--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/BlueShip.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/playerShip1_green.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,21 +25,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/MainLevel.tscn", "res://scenes/BlueShip.tscn", "res://scenes/StonePlatform.tscn")
-current_scene="res://scenes/BlueShip.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/MainLevel.tscn", "res://scenes/new_levl.tscn", "res://scenes/StonePlatform.tscn")
+current_scene="res://scenes/new_levl.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/ObjectiveArea.gd", "res://scenes/PlatformBlue.gd"]
+open_scripts=["res://scenes/character_body_2d.gd", "res://scenes/ObjectiveArea.gd", "res://scenes/PlatformBlue.gd"]
 selected_script="res://scenes/ObjectiveArea.gd"
-open_help=["Node2D", "Sprite2D"]
+open_help=["CompressedTexture2D", "Node2D", "Sprite2D", "StaticBody2D"]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=0.857143
 
 [ShaderEditor]
 
